KubernetesManifests/03-FlightService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  labels:
    app: flight-service
    s1p: flight
spec:  
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:          
      containers:
      - name: flight-service
        image: pavithravasudevan/flightbookingservice:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8100
