KubernetesManifests/01-IataService.yaml
apiVersion: v1
kind: Service
metadata:
  name: iata
spec:
  type: ExternalName
  externalName: <<Insert MySQL DNS>>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iata-service
  labels:
    app: iata-service
    s1p: iata
spec:
  selector:
    matchLabels:
      app: iata-service
  template:
    metadata:
      labels:
        app: iata-service 
    spec:
      containers:
      - name: iata-service
        image: pavithravasudevan/iata-service:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8102
---
apiVersion: v1
kind: Service
metadata:
  name: iata-service
  labels:
    s1p: iata
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
spec:
  type: ClusterIP
  selector:
    app: iata-service
  ports:
  - port: 80
    targetPort: 8102
