KubernetesManifests/05-ApiService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  labels:
    app: api-service
    s1p: api
spec:  
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service   
    spec:
      serviceAccountName: api-service-account      
      containers:
      - name: api-service        
        image: pavithravasudevan/api-gateway-service:0.0.3-SNAPSHOT 
        imagePullPolicy: Always     
        ports:
        - containerPort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
spec:
  type: NodePort
  selector:
    app: api-service
  ports:
  - port: 8765
    targetPort: 8765
