KubernetesManifests/06-IngressService.yaml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: travel-ingress-service
  labels:
    app: travel-ingress-service
  annotations:  
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing   
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:721541693596:certificate/bc69cecb-6be7-4641-bf50-eadbbbf90921
    #alb.ingress.kubernetes.io/auth-session-cookie: AWSELBAuthSessionCookie
    #alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    #alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn": "arn:aws:cognito-idp:us-east-1:721541693596:userpool/us-east-1_DUfDYLnmA","UserPoolClientId":"3sg2839k39jun49dp72br07bi1","UserPoolDomain":"auth.pavithraavasudevan.com"}'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}' 
spec:
   rules:
    - host: bookingservice.pavithraavasudevan.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation         
          - path: /*
            backend:
              serviceName: api-service
              servicePort: 8765
  
    - host: monitoring.pavithraavasudevan.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation               
          - path: /*
            backend:
              serviceName: monitoring-grafana
              servicePort: 80
   
    
         
# Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.
